--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="flex w-full flex-wrap justify-center px-4 xl:mx-auto xl:w-10/12">
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <img src="/src/img/foto1.jpg" alt="Landing Page" width="w-full" />
+              <img src="https://github.com/novaliatrp-pixel/Portofolio/blob/main/Novaa%20Violia/src/img/foto1.jpg" alt="Landing Page" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">My Photo</h3>
             <p class="text-base font-medium text-paragraf">Ini aku, orang yang suka tertawa dan menikmati setiap momen kecil dalam hidup 🌸</p>
