--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <img src="/src/img/foto2.jpg" alt="E-Commerce" width="w-full" />
+              <img src="https://github.com/novaliatrp-pixel/Portofolio/blob/main/Novaa%20Violia/src/img/foto2.jpg" alt="E-Commerce" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Favorite Food</h3>
             <p class="text-base font-medium text-secondary">Matcha itu favoritku 🍵 rasanya tenang tapi tetap manis, kayak suasana hati yang damai.</p>
@@ -218,7 +218,7 @@
 
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <img src="/src/img/foto3.jpg" alt="Technical Documentation" width="w-full" />
+              <img src="https://github.com/novaliatrp-pixel/Portofolio/blob/main/Novaa%20Violia/src/img/foto3.jpg" alt="Technical Documentation" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Favorite Color 1</h3>
             <p class="text-base font-medium text-secondary">dari kecil, aku suka banget sama warna pink, warnanya selalu bikin aku bahagia 💗 lembut, manis, dan penuh kasih.</p>
@@ -226,7 +226,7 @@
           
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <img src="/src/img/foto4.jpg" alt="Tribute Page" width="w-full" />
+              <img src="https://github.com/novaliatrp-pixel/Portofolio/blob/main/Novaa%20Violia/src/img/foto4.jpg" alt="Tribute Page" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Favorite Color 2</h3>
             <p class="text-base font-medium text-secondary">sejak beranjak remaja, kuning menjadi warna favoritku warna cerah yang paling aku suka 🌼 selalu ngingetin aku buat tetap semangat dan bersinar.</p>
