--- a/index.html
+++ b/index.html
@@ -251,16 +251,16 @@
         <div class="w-full px-4">
           <div class="flex flex-wrap items-center justify-center">
             <a href="#" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
-              <img src="/src/img/client/axioo.png" alt="AXIOO" />
+              <img src="https://github.com/novaliatrp-pixel/Portofolio/blob/main/Novaa%20Violia/src/img/client/axioo.png" alt="AXIOO" />
             </a>
             <a href="#" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
-              <img src="/src/img/client/sumitomo.png" alt="SUMITOMO" />
+              <img src="https://github.com/novaliatrp-pixel/Portofolio/blob/main/Novaa%20Violia/src/img/client/sumitomo.png" alt="SUMITOMO" />
             </a>
             <a href="#" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
-              <img src="/src/img/client/tdk.png" alt="TDK" />
+              <img src="https://github.com/novaliatrp-pixel/Portofolio/blob/main/Novaa%20Violia/src/img/client/tdk.png" alt="TDK" />
             </a>
             <a href="#" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
-              <img src="/src/img/client/telkom.png" alt="TELKOM" />
+              <img src="https://github.com/novaliatrp-pixel/Portofolio/blob/main/Novaa%20Violia/src/img/client/telkom.png" alt="TELKOM" />
             </a>
           </div>
         </div>
